Display characters on raid loading screen
Store characters id list in raids db table
Remove constants for CLASS_SILHOUETTE texture
Minor refactors & debug message change